--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
                     <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Monopoly</h3>
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
-                    <p class="text-center text-center font-semibold text-black text-[#1a1a1a]">Diventa il magnate degli immobili e sbaraglia i tuoi avversari!</p>
+				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
+					<li>Da 2 a 6 giocatori</li>
+					<li><span class="font-bold">Obiettivo:</span> Acquistare, scambiare e sviluppare proprietà per accumulare ricchezza</li>
+					<li><span class="font-bold">Vittoria:</span> Mandare in bancarotta tutti gli avversari</li>
+				</ul>
                 </div>
             </div>
         </div>
@@ -120,7 +124,11 @@
                     <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Trivial Pursuit</h3>
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
-                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Metti alla prova la tua cultura generale e rispondi a tutte le domande!</p>
+				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a] text-[14px]">
+					<li>Da 2 a 6 giocatori</li>
+					<li><span class="font-bold">Obiettivo:</span> Rispondere correttamente a domande di cultura generale in varie categorie</li>
+					<li><span class="font-bold">Vittoria:</span> Completare la plancia con tutte le “tacche” di categoria e rispondere alla domanda finale</li>
+				</ul>
                 </div>
             </div>
         </div>
@@ -133,7 +141,11 @@
                     <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Jenga</h3>
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
-                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Sfida la gravità e i tuoi amici senza far crollare la torre!</p>
+				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
+					<li>1+</li>
+					<li><span class="font-bold">Obiettivo:</span> Rimuovere blocchi di legno e posizionarli in cima senza far cadere la torre</li>
+					<li><span class="font-bold">Vittoria:</span> Essere l’ultimo a completare un turno senza far crollare la torre</li>
+				</ul>
                 </div>
             </div>
         </div>
@@ -146,7 +158,11 @@
                     <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Risiko</h3>
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
-                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Conquista il mondo con la tua strategia militare!</p>
+				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
+					<li>Da 3 a 6 giocatori</li>
+					<li><span class="font-bold">Obiettivo:</span> Conquistare territori e completare la propria missione segreta</li>
+					<li><span class="font-bold">Vittoria:</span> Raggiungere per primi l’obiettivo assegnato o dominare la mappa</li>
+				</ul>
                 </div>
             </div>
         </div>
@@ -159,7 +175,11 @@
                     <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Shangai</h3>
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
-                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Estrai le bacchette senza far muovere le altre!</p>
+				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
+					<li>Da 2 a 6 giocatori</li>
+					<li><span class="font-bold">Obiettivo:</span> Raccogliere il maggior numero di bastoncini senza muovere gli altri</li>
+					<li><span class="font-bold">Vittoria:</span> Totalizzare più punti in base al valore dei bastoncini raccolti</li>
+				</ul>
                 </div>
             </div>
         </div>
@@ -172,7 +192,11 @@
                     <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Uno</h3>
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
-                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Scarta tutte le carte e urla UNO per vincere!</p>
+				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
+					<li>Da 2 a 10 giocatori</li>
+					<li><span class="font-bold">Obiettivo:</span> Sbarazzarsi di tutte le proprie carte usando colori o numeri corrispondenti</li>
+					<li><span class="font-bold">Vittoria:</span> Ottenere punti finché qualcuno raggiunge il punteggio stabilito</li>
+				</ul>
                 </div>
             </div>
         </div>
@@ -185,7 +209,11 @@
                     <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Scarabeo</h3>
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
-                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Forma parole e ottieni il punteggio più alto!</p>
+				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
+					<li>Da 2 a 4 giocatori</li>
+					<li><span class="font-bold">Obiettivo:</span> Formare parole su una griglia usando lettere pescate casualmente</li>
+					<li><span class="font-bold">Vittoria:</span> Accumulare più punti possibile alla fine del gioco</li>
+				</ul>
                 </div>
             </div>
         </div>
@@ -198,7 +226,11 @@
                     <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Taboo</h3>
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
-                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Descrivi la parola senza usare le parole proibite!</p>
+				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
+					<li>4+ giocatori</li>
+					<li><span class="font-bold">Obiettivo:</span> Far indovinare una parola senza usare termini proibiti indicati nella carta</li>
+					<li><span class="font-bold">Vittoria:</span> Accumulare più punti degli avversari entro il tempo limite</li>
+				</ul>
                 </div>
             </div>
         </div>
@@ -211,7 +243,11 @@
                     <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Coco Rido</h3>
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
-                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Gioco di carte irriverente e divertente per gruppi di amici.</p>
+				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a] text-[15px]">
+					<li>3+ giocatori</li>
+					<li><span class="font-bold">Obiettivo:</span> Completare frasi usando carte con risposte divertenti o assurde</li>
+					<li><span class="font-bold">Vittoria:</span> Ottenere più carte/vittorie possibili in base alle scelte del giudice di turno</li>
+				</ul>
                 </div>
             </div>
         </div>
@@ -224,7 +260,11 @@
                     <h3 class="font-bold text-center py-4 text-[#1a1a1a]">Quick Stop</h3>
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
-                    <p class="text-center font-semibold text-black text-[#1a1a1a]">Sfida lampo dove la velocità è tutto!</p>
+				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
+					<li>Da 2 a 6 giocatori</li>
+					<li><span class="font-bold">Obiettivo:</span> Essere i più rapidi a dire parole valide in categorie indicate</li>
+					<li><span class="font-bold">Vittoria:</span> Accumulare più punti rispondendo velocemente e correttamente</li>
+				</ul>
                 </div>
             </div>
         </div>
@@ -232,8 +272,7 @@
     </div>
 </section>
 
-<div class="divider"></div>
-
+    <div class="divider"></div>
 
     <!-- About Section -->
     <section id="about" class="py-20 px-6 max-w-6xl mx-auto">
@@ -355,6 +394,7 @@
     </div>
 </body>
 </html>
+
 
 
 
