--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
 				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
-					<li>Da 2 a 6 giocatori</li>
-					<li><span class="font-bold">Obiettivo:</span> Acquistare, scambiare e sviluppare proprietà per accumulare ricchezza</li>
-					<li><span class="font-bold">Vittoria:</span> Mandare in bancarotta tutti gli avversari</li>
+					<li>Da 2 a 6 giocatori.</li>
+					<li><span class="font-bold">Obiettivo:</span> Acquistare, scambiare e sviluppare proprietà per accumulare ricchezza.</li>
+					<li><span class="font-bold">Vittoria:</span> Mandare in bancarotta tutti gli avversari.</li>
 				</ul>
                 </div>
             </div>
@@ -125,9 +125,9 @@
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
 				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a] text-[14px]">
-					<li>Da 2 a 6 giocatori</li>
-					<li><span class="font-bold">Obiettivo:</span> Rispondere correttamente a domande di cultura generale in varie categorie</li>
-					<li><span class="font-bold">Vittoria:</span> Completare la plancia con tutte le “tacche” di categoria e rispondere alla domanda finale</li>
+					<li>Da 2 a 6 giocatori.</li>
+					<li><span class="font-bold">Obiettivo:</span> Rispondere correttamente a domande di cultura generale in varie categorie.</li>
+					<li><span class="font-bold">Vittoria:</span> Completare la plancia con tutte le “tacche” di categoria e rispondere alla domanda finale.</li>
 				</ul>
                 </div>
             </div>
@@ -143,8 +143,8 @@
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
 				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
 					<li>1+</li>
-					<li><span class="font-bold">Obiettivo:</span> Rimuovere blocchi di legno e posizionarli in cima senza far cadere la torre</li>
-					<li><span class="font-bold">Vittoria:</span> Essere l’ultimo a completare un turno senza far crollare la torre</li>
+					<li><span class="font-bold">Obiettivo:</span> Rimuovere blocchi di legno e posizionarli in cima senza far cadere la torre.</li>
+					<li><span class="font-bold">Vittoria:</span> Essere l’ultimo a completare un turno senza far crollare la torre<./li>
 				</ul>
                 </div>
             </div>
@@ -159,9 +159,9 @@
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
 				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
-					<li>Da 3 a 6 giocatori</li>
-					<li><span class="font-bold">Obiettivo:</span> Conquistare territori e completare la propria missione segreta</li>
-					<li><span class="font-bold">Vittoria:</span> Raggiungere per primi l’obiettivo assegnato o dominare la mappa</li>
+					<li>Da 3 a 6 giocatori.</li>
+					<li><span class="font-bold">Obiettivo:</span> Conquistare territori e completare la propria missione segreta.</li>
+					<li><span class="font-bold">Vittoria:</span> Raggiungere per primi l’obiettivo assegnato o dominare la mappa.</li>
 				</ul>
                 </div>
             </div>
@@ -176,9 +176,9 @@
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
 				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
-					<li>Da 2 a 6 giocatori</li>
-					<li><span class="font-bold">Obiettivo:</span> Raccogliere il maggior numero di bastoncini senza muovere gli altri</li>
-					<li><span class="font-bold">Vittoria:</span> Totalizzare più punti in base al valore dei bastoncini raccolti</li>
+					<li>Da 2 a 6 giocatori.</li>
+					<li><span class="font-bold">Obiettivo:</span> Raccogliere il maggior numero di bastoncini senza muovere gli altri.</li>
+					<li><span class="font-bold">Vittoria:</span> Totalizzare più punti in base al valore dei bastoncini raccolti.</li>
 				</ul>
                 </div>
             </div>
@@ -193,9 +193,9 @@
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
 				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
-					<li>Da 2 a 10 giocatori</li>
-					<li><span class="font-bold">Obiettivo:</span> Sbarazzarsi di tutte le proprie carte usando colori o numeri corrispondenti</li>
-					<li><span class="font-bold">Vittoria:</span> Ottenere punti finché qualcuno raggiunge il punteggio stabilito</li>
+					<li>Da 2 a 10 giocatori.</li>
+					<li><span class="font-bold">Obiettivo:</span> Sbarazzarsi di tutte le proprie carte usando colori o numeri corrispondenti.</li>
+					<li><span class="font-bold">Vittoria:</span> Ottenere punti finché qualcuno raggiunge il punteggio stabilito.</li>
 				</ul>
                 </div>
             </div>
@@ -210,9 +210,9 @@
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
 				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
-					<li>Da 2 a 4 giocatori</li>
-					<li><span class="font-bold">Obiettivo:</span> Formare parole su una griglia usando lettere pescate casualmente</li>
-					<li><span class="font-bold">Vittoria:</span> Accumulare più punti possibile alla fine del gioco</li>
+					<li>Da 2 a 4 giocatori.</li>
+					<li><span class="font-bold">Obiettivo:</span> Formare parole su una griglia usando lettere pescate casualmente.</li>
+					<li><span class="font-bold">Vittoria:</span> Accumulare più punti possibile alla fine del gioco.</li>
 				</ul>
                 </div>
             </div>
@@ -227,9 +227,9 @@
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
 				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
-					<li>4+ giocatori</li>
-					<li><span class="font-bold">Obiettivo:</span> Far indovinare una parola senza usare termini proibiti indicati nella carta</li>
-					<li><span class="font-bold">Vittoria:</span> Accumulare più punti degli avversari entro il tempo limite</li>
+					<li>4+ giocatori.</li>
+					<li><span class="font-bold">Obiettivo:</span> Far indovinare una parola senza usare termini proibiti indicati nella carta.</li>
+					<li><span class="font-bold">Vittoria:</span> Accumulare più punti degli avversari entro il tempo limite.</li>
 				</ul>
                 </div>
             </div>
@@ -244,9 +244,9 @@
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
 				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a] text-[15px]">
-					<li>3+ giocatori</li>
-					<li><span class="font-bold">Obiettivo:</span> Completare frasi usando carte con risposte divertenti o assurde</li>
-					<li><span class="font-bold">Vittoria:</span> Ottenere più carte/vittorie possibili in base alle scelte del giudice di turno</li>
+					<li>3+ giocatori.</li>
+					<li><span class="font-bold">Obiettivo:</span> Completare frasi usando carte con risposte divertenti o assurde.</li>
+					<li><span class="font-bold">Vittoria:</span> Ottenere più carte/vittorie possibili in base alle scelte del giudice di turno.</li>
 				</ul>
                 </div>
             </div>
@@ -261,9 +261,9 @@
                 </div>
                 <div class="flip-card-back bg-[#f5f5f5] dark:bg-[#b89600] shadow-md border-2 border-gray-300 dark:border-gray-500 flex items-center justify-center p-4">
 				<ul class="list-disc list-inside text-left font-semibold text-[#1a1a1a]">
-					<li>Da 2 a 6 giocatori</li>
-					<li><span class="font-bold">Obiettivo:</span> Essere i più rapidi a dire parole valide in categorie indicate</li>
-					<li><span class="font-bold">Vittoria:</span> Accumulare più punti rispondendo velocemente e correttamente</li>
+					<li>Da 2 a 6 giocatori.</li>
+					<li><span class="font-bold">Obiettivo:</span> Essere i più rapidi a dire parole valide in categorie indicate.</li>
+					<li><span class="font-bold">Vittoria:</span> Accumulare più punti rispondendo velocemente e correttamente.</li>
 				</ul>
                 </div>
             </div>
@@ -394,6 +394,7 @@
     </div>
 </body>
 </html>
+
 
 
 
