--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				<ul class="list-disc list-inside text-sm text-left font-semibold text-[#1a1a1a]">
 					<li>1+</li>
 					<li><span class="font-bold">Obiettivo:</span> Rimuovere blocchi di legno e posizionarli in cima senza far cadere la torre.</li>
-					<li><span class="font-bold">Vittoria:</span> Essere l’ultimo a completare un turno senza far crollare la torre<./li>
+					<li><span class="font-bold">Vittoria:</span> Essere l’ultimo a completare un turno senza far crollare la torre.</li>
 				</ul>
                 </div>
             </div>
@@ -394,6 +394,7 @@
     </div>
 </body>
 </html>
+
 
 
 
